Ran rewrite